# spotter

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml
core/api/: auth_login.py  service.py  urls.py  views.py
core/api/filters/: book.py
core/api/serializers/: book.py
core/api/serializers/search/: book_search.py
core/api/utils/: recommendations.py  similarity.py  validate_image.py
core/books/: admin.py  models.py
core/books/fixtures/: authors.json  books.json
core/project/: urls.py
core/project/settings/: __init__.py  admin_template_config.py  api.py  base.py  development.py  general_security.py  production.py  utils_config.py
core/project/settings/middleware/: current_request.py
core/project/settings/unfold/: context.py
core/project/static/assets/css/unfold/: style.css
core/project/utils/: api_setup.py
core/templates/admin/: index.html
core/templates/unfold/layouts/: skeleton.html
core/users/: admin.py  models.py
core/works/: admin.py  apps.py  models.py
core/works/fixtures/: series.json  work.json
