[tool.poetry]
name = "core"
version = "0.1.0"
description = "Django Developer -- remote"
authors = ["edmundrotimi <edmundrotimi@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.16"
dotmap = "^1.3.30"
python-decouple = "^3.8"
django-split-settings = "^1.3.2"
sentry-sdk = {extras = ["django"], version = "^2.14.0"}
django-cleanup = "^8.1.0"
django-cors-headers = "^4.4.0"
coverage = "^7.6.1"
django-autoslug = "^1.9.9"
pillow = "^10.4.0"
psycopg = "^3.2.2"
psycopg-binary = "^3.2.2"
shortuuid = "^1.0.13"
django-csp = "^3.8"
django-simple-history = "^3.7.0"
django-unfold = "^0.38.0"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
django-filter = "^24.3"
django-defender = "^0.9.8"
django-auto-logout = "^0.5.1"
model-bakery = "^1.19.5"
djangorestframework-simplejwt = "^5.3.1"
django-import-export = "^4.1.1"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pre-commit = "^3.8.0"
django-debug-toolbar = "^4.4.6"
werkzeug = "^3.0.4"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
